# faiss

./: .gitignore  .gitmodules  CMakeLists.txt
demos/: demo_sift1M.cpp
demos/rocksdb_ivf/: CMakeLists.txt  RocksDBInvertedLists.cpp  RocksDBInvertedLists.h  convert_bvecs_to_fvecs.cpp  convert_bvecs_to_fvecs.h  faiss_rocksdb_ivf.cpp  process_header_file.cpp  process_header_file.h  test.cpp  test_bvecs.cpp  test_bvecs.h  test_ivf.cpp
demos/rocksdb_ivf/draw/: compute_gt.py  draw_pic.py  draw_write_hotness.py  draw_xnlist_yprobes.py  draw_xnlist_yr_lat.py  process_write_hotness_file.py
demos/rocksdb_ivf/draw/data/: diskann_vs_lsmann.txt  list_100.txt  list_100_done.txt  list_2500.txt  list_2500_done.txt
demos/rocksdb_ivf/scripts/: clean_convert_file.sh  convert_bvecs_to_fvecs.sh  draw_pic.sh  faiss_rocksdb_ivf_flat_bigann.sh  ivf_flat_bigann.sh  ivf_rocksdb.sh  process_file_without_header.sh  test.sh  test_bvecs.sh
